--- a/index.html
+++ b/index.html
@@ -3,8 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Vue js Intro</title>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
-    
+        <div id="myApp">
+            <h1>Batman Quotes <small> {{ newQuote }}</small></h1>
+            <!--v-on sirve para escuchar eventos-->
+            <input 
+                type="text" 
+                v-model="newQuote"
+                v-on:keypress.enter="addQuote" 
+            >
+            <hr/>
+
+            <ul>
+                <li v-for="({ quote, author }, index) in quotes">
+                    <span>{{ index + 1 }} - {{  quote }}</span>
+                    <!-- <blockquote v-if="author"> - {{ author }}</blockquote> -->
+                    <blockquote v-show="author"> - {{ author }}</blockquote>
+
+                </li>
+            </ul>
+        </div>
+        
+        <script src="app.js"></script>
 </body>
 </html>
